# sqlite-raft

./: .gitignore  .gitmodules  Cargo.toml  README.md  Roadmap.md  TODO.md  azure-pipelines.yml  build.rs
grpc-experiments/: Cargo.toml  TODO.md
grpc-experiments/proto/: raftsqlite.proto
grpc-experiments/src/: lib.rs
grpc-experiments/src/proto/: sqlite_requests.rs
model-test/: Cargo.toml
model-test/src/: main.rs
proto/: raftsqlite.proto  sqlite_commands.proto  sqlite_requests.proto
res/debug/: .gitignore  drop_all.sql  raft_storage_debug.sqlite3
res/sql/: create_tables.sql  exists.sql  init.sql
res/sql/core/: exists.sql  insert.sql
res/sql/entry/: delete.sql  query.sql  query_first_index.sql  query_last_index.sql  query_range.sql
res/sql/hard_state/: insert_or_replace.sql  query.sql
res/sql/node/: delete.sql  insert.sql
res/sql/snapshot/: insert_or_replace.sql  query.sql
res/test/: .gitignore  init_test_db.sql
sqlite-raft-node/: Cargo.toml
sqlite-raft-node/src/: cluster.rs  log_entry.rs  main.rs  node.rs  router.rs
sqlite-raft-storage/: Cargo.toml
sqlite-raft-storage/src/: debug.rs  lib.rs  main.rs  snapshot_data.rs
sqlite-raft-storage/tests/: tests.rs
sqlite-requests/: Cargo.toml  README.md  build.rs
sqlite-requests/src/: error.rs  lib.rs
sqlite-requests/src/connection/: access.rs  mod.rs
sqlite-requests/src/execute/: mod.rs  proto_convert.rs
sqlite-requests/src/parameter/: mod.rs  proto_convert.rs
sqlite-requests/src/proto/: sqlite_requests.rs
sqlite-requests/src/query/: mod.rs  proto_convert.rs
sqlite-requests/src/request/: mod.rs  proto_convert.rs
sqlite-requests/src/value/: proto_convert.rs  serde.rs
sqlite-requests/tests/: tests.rs
sqlite-requests/tests/integration_test/: execute.rs  mod.rs  query.rs
sqlite-requests/tests/integration_test/serialization/: mod.rs  proto.rs  serde.rs
sqlite-requests/tests/res/sql/: test_execute_indexed_param.sql  test_execute_named_param.sql  test_execute_no_param.sql  test_query_no_param.sql
sqlite-requests/tests/utils/: mod.rs  temp_db.rs
sqlite-test-utils/: Cargo.toml
sqlite-test-utils/src/: lib.rs  temp_dir.rs
sqlite-user-storage/: Cargo.toml
sqlite-user-storage/res/debug/: .gitignore
sqlite-user-storage/src/: lib.rs
sqlite-user-storage/src/view/: mod.rs  nested_savepoint.rs  savepoint_stack.rs  sqlite_snapshot.rs
sqlite-user-storage/tests/: tests.rs
sqlite-user-storage/tests/utils/: mod.rs
sqlite-user-storage/tests/view/: mod.rs
src/: connection.rs  error.rs  execute.rs  hard_state.rs  lib.rs  log_entry.rs  main.rs  parameter.rs  query.rs  request.rs  sqlite_commands_pb.rs
src/connection/: access.rs  mod.rs
src/error/: index.rs
src/execute/: mod.rs  proto_convert.rs
src/model/: core.rs  entry.rs  hard_state.rs  mod.rs  snapshot.rs
src/parameter/: convert.rs  mod.rs
src/proto/: .gitignore  helloworld.proto  mod.rs  raftsqlite.proto  sqlite_requests.rs
src/proto_gen/: .gitignore  eraftpb.rs  mod.rs  sqlite_commands.rs
src/query/: convert.rs  mod.rs  proto_convert.rs
src/request/: mod.rs  proto_convert.rs
src/storage_traits/: impl_mem.rs  impl_sqlite.rs  mod.rs
src/value/: mod.rs  proto_convert.rs  serde.rs
tests/: integration_test.rs  tests.rs
tests/common/: mod.rs  query_helper.rs  sqldiff.rs  temp_db.rs
tests/integration_test/: execute.rs  mod.rs  proto.rs  query.rs  serde.rs
tests/mem_storage_tests/: mod.rs
tests/res/: .gitignore
tests/utils/: mod.rs  query_helper.rs  sqldiff.rs  temp_db.rs
(+53 files in other folders)
