[package]
name = "sqlite-commands"
version = "0.1.0"
authors = ["Mathias Lengler <mathmatze@googlemail.com>"]
build = "build.rs"

[dependencies]
failure = "0.1.2"
serde = "1.0.78"
serde_derive = "1.0.78"
bincode = "1.0.1"
protobuf = "~2.0"

[dependencies.rusqlite]
version = "0.14.0"
features = ["bundled"]

[build-dependencies]
protoc-rust = "2.0.4"

[dev-dependencies]
tempfile = "3.0.3"
serde_json = "1.0.27"
bincode = "1.0.1"

[features]
default = ["blob"]
blob = ["rusqlite/blob"]
