[package]
name = "grpc-experiments"
version = "0.1.0"
authors = ["Mathias Lengler <mathmatze@googlemail.com>"]

[dependencies]
futures = "0.1.24"
log = "0.4.5"
slog = "2.3.3"
slog-async = "2.3.0"
slog-scope = "4.0.1"
slog-stdlog = "3.0.2"
slog-term = "2.4.0"
protobuf = "2.0.5"
raft = { path = "../raft-rs" }
sqlite-requests = { path = "../sqlite-requests"}

[dependencies.grpcio]
version = "0.4.0"
default-features = false
features = ["protobuf-codec"]

[build-dependencies]
protoc-grpcio = "0.2.0"
