[package]
name = "sqlite-user-storage"
version = "0.1.0"
authors = ["Mathias Lengler <mathmatze@googlemail.com>"]

[dependencies]
failure = "0.1.2"
sqlite-requests = {path = "../sqlite-requests"}

[dependencies.rusqlite]
version = "0.15.0"
features = ["bundled"]

[dev-dependencies]
sqlite-test-utils = {path = "../sqlite-test-utils"}